<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>video4j-fingerprint</artifactId>

    <parent>
        <groupId>io.metaloom.video</groupId>
        <artifactId>video4j-parent</artifactId>
        <version>4.10.0-SNAPSHOT</version>
    </parent>


    <name>video4j-fingerprint</name>
    <description>Video4j extension which provides video fingerprinting</description>
    <inceptionYear>2022</inceptionYear>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <video4j.version>2.0.0-SNAPSHOT</video4j.version>
    </properties>

    <dependencies>
        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <!-- Utils -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>io.metaloom.utils</groupId>
            <artifactId>utils</artifactId>
            <version>0.3.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>io.metaloom.utils</groupId>
            <artifactId>hash-utils</artifactId>
            <version>0.5.0-SNAPSHOT</version>
        </dependency>

        <!-- Video -->
        <dependency>
            <groupId>io.metaloom.video</groupId>
            <artifactId>video4j</artifactId>
            <version>${video4j.version}</version>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.9.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.22.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>25</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--enable-native-access=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
